# StyrofoamWrap

./: .env  .gitignore  README.md  env_setup.py  pyproject.toml  run.ps1  styrofoam_w_v01.hiplc  styrofoam_w_v01_001.hiplc  styrofoam_w_v01_002.hiplc  styrofoam_w_v01_003.hiplc  styrofoam_w_v01_004.hiplc  styrofoam_w_v01_005.hiplc  styrofoam_w_v01_006.hiplc  styrofoam_w_v01_007.hiplc  styrofoam_w_v03_test.hiplc  usd_material_mapping.json
Assets/: B0009VXBAQ_A3DC56CVZN31ALDX_base.usd  B000H7BCJ4_A3DCJVRR51BY4X0U_base.usd  B000PNS8MO_A3DCD94R5PHNLMY7_base.usd  B003TPBY4E_A3DCUCLX0UR74ML2_base.usd  B08DG1BRV6_A3DCRC7QTHAQEXGD_base.usd  B08DY9HNYD_A3DC9YRLUTQHYG79_base.usd  B08Z2XXFFW_A3DCTLZR0P9NAB2J_base.usd  B08ZCJNHXD_A3DCAXEE4UPJFAWY_base.usd  modified_B0009VXBAQ_A3DC56CVZN31ALDX_base.usd  modified_B000H7BCJ4_A3DCJVRR51BY4X0U_base.usd  modified_B000PNS8MO_A3DCD94R5PHNLMY7_base.usd  modified_B003TPBY4E_A3DCUCLX0UR74ML2_base.usd  modified_B08DG1BRV6_A3DCRC7QTHAQEXGD_base.usd  modified_B08DY9HNYD_A3DC9YRLUTQHYG79_base.usd  modified_B08Z2XXFFW_A3DCTLZR0P9NAB2J_base.usd  modified_B08ZCJNHXD_A3DCAXEE4UPJFAWY_base.usd  modified_nan_A3DCZXE0UNXGD6W5_base.usd  modified_nan_A3DCZYC5E6B3MT80_base.usd  modified_nan_A3DCZYWK9BKJKQ80_base.usd  modified_nan_A3DCZZ4UL4LZ4CLW_base.usd  nan_A3DCZXE0UNXGD6W5_base.usd  nan_A3DCZYC5E6B3MT80_base.usd  nan_A3DCZYWK9BKJKQ80_base.usd  nan_A3DCZZ4UL4LZ4CLW_base.usd
backup/: styrofoam_w_v01_bak1.hiplc  styrofoam_w_v01_bak10.hiplc  styrofoam_w_v01_bak11.hiplc  styrofoam_w_v01_bak12.hiplc  styrofoam_w_v01_bak13.hiplc  styrofoam_w_v01_bak14.hiplc  (+49 more)
(+71 files in other folders)
